# hf_inference

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  API.md  ARCHITECTURE_EXPLAINED.md  CHANGELOG.md  CLEANUP_REMOTE_INFERENCE.md  CONTRIBUTING.md  CSS_REFACTOR_NOTES.md  Dockerfile  FUNCTIONAL_REFACTOR_SUMMARY.md  FUNCTIONAL_REFACTOR_TODO.md  IMPLEMENTATION_COMPLETE.md  LATEST_UI_FIXES.md  MIGRATION.md  PHASE1_COMPLETE.md  PHASE4_COMPLETE.md  QUICKSTART.md  RATE_LIMIT_SOLUTION.md  README.md  REFACTORING.md  REFACTORING_SUMMARY.md  REFACTORING_VISUAL.md  TODO.md  TODO_PHASE4.md  conftest.py  demo.yaml  main.py  notes.md  pyproject.toml  release.sh  start_server.py
.github/workflows/: build.yaml
app/: __init__.py  auth.py  config.py  form_schemas.py  helpers.py  main.py  schemas.py  schemas_pb2.py  task_schemas.py  throttle.py  types.py  utilities.py
app/core/: __init__.py  device.py  registry.py  resources.py  tasks.py
app/core/runners/: __init__.py  base.py  diffusion_shared.py  multimodal.py  retrieval.py  text.py  text_onnx.py  timeseries.py  video_generation.py  vision_3d.py  vision_audio.py  vision_generation.py  vision_understanding.py
app/core/utils/: media.py
app/infrastructure/: __init__.py  data.py  device.py  errors.py  file_io.py  functional.py  response.py  runner_utils.py
app/routers/: __init__.py  inference.py  intents.py  models.py
app/routes/: auth_routes.py  healthz.py  hf_models.py  home.py  inference.py  models.py  run_form.py
app/runners/: __init__.py  audio_classification.py  automatic_speech_recognition.py  depth_estimation.py  document_question_answering.py  feature_extraction.py  fill_mask.py  image_classification.py  image_feature_extraction.py  image_segmentation.py  image_text_to_text.py  image_to_image.py  image_to_text.py  mask_generation.py  object_detection.py  question_answering.py  sentiment.py  summarization.py  table_question_answering.py  text2text_generation.py  text_generation.py  text_to_audio.py  text_to_image.py  text_to_speech.py  token_classification.py  translation.py  video_classification.py  visual_question_answering.py  zero_shot_audio_classification.py  zero_shot_classification.py  zero_shot_image_classification.py  zero_shot_object_detection.py
app/services/: __init__.py  hf_models_service.py
app/templates/: base.html  inference_modal.html  login.html  models.html  run_modal.html
app/views/: hf_models_table.py
cache/: models_preloaded.json
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
proto/: contracts.proto
scripts/: generate_contracts.py  quick_validation.py
tests/: conftest.py  test_api_endpoints.py  test_device_dtype.py  test_models_route.py  test_models_status.py  test_multimodal.py  test_onnx.py  test_phase0_onnx.py  test_phase0_text.py  test_registry_eviction.py  test_run_schema.py  test_runners_minimal.py  test_streaming.py  test_streaming_diffusion.py  test_text.py  test_video_generation.py  test_vision_3d.py  test_vision_audio.py  test_vision_generation.py  test_vision_understanding.py
tests/integration/: test_any_to_any.py  test_api_endpoints.py  test_asr_basic.py  test_asr_preflight.py  test_diffusers_api_mismatches.py  test_feature_extraction.py  test_fill_mask.py  test_image_to_text.py  test_inference_diffusion_unload.py  test_inference_minimal_parametrized.py  test_keypoint_detection_models.py  test_models_status.py  test_multimodal.py  test_onnx.py  test_question_answering.py  test_runners_minimal.py  test_segmentation_custom_classes.py  test_sentence_similarity.py  test_streaming.py  test_table_question_answering.py  test_text.py  test_text_ranking.py  test_time_series_forecasting.py  test_token_classification.py  test_tokenizer_compatibility.py  test_translation.py  test_tts_real.py  test_video_generation.py  test_vision_audio.py  test_vision_understanding.py  test_visual_document_retrieval.py  test_zero_shot_classification.py
tests/runners/: test_audio.py  test_audio_classification.py  test_automatic_speech_recognition.py  test_depth_estimation.py  test_document_question_answering.py  test_extra_args.py  test_feature_extraction.py  test_fill_mask.py  test_image_classification.py  test_image_feature_extraction.py  test_image_segmentation.py  test_image_text_to_text.py  test_image_to_image.py  test_image_to_text.py  test_mask_generation.py  test_object_detection.py  test_question_answering.py  test_sentiment_analysis.py  test_summarization.py  test_table_question_answering.py  test_text2text_generation.py  test_text_generation.py  test_text_tasks.py  test_text_to_audio.py  test_text_to_image.py  test_text_to_speech.py  test_token_classification.py  test_translation.py  test_video_classification.py  test_visual_question_answering.py  test_zero_shot_audio_classification.py  test_zero_shot_classification.py  test_zero_shot_image_classification.py  test_zero_shot_object_detection.py
tests/unit/: test_audio_contracts.py  test_cache_persistence.py  test_device_dtype.py  test_embedding_runner_remote_code.py  test_fixtures.py  test_media_decode_base64.py  test_multimodal_utils.py  test_registry_eviction.py
(+63 files in other folders)
