[project]
name = "jam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "transformers==4.57.0",
  "diffusers==0.27.2",
  "accelerate>=0.30,<0.35",
  "sentence-transformers==5.1.1",
  "huggingface-hub>=0.35.3",
  "pillow>=11.3.0",
  "safetensors>=0.6.2",
  "sentencepiece>=0.2.1",
  "timm>=1.0.20",
  "torch>=2.8.0",
  "torchvision>=0.23.0",
  "pandas>=2.3.3",
  "sacremoses>=0.1.1",
  "einops>=0.8.1",
  "pydantic>=2.12.0",
  "protobuf==4.25.3",
  "soundfile>=0.13.1",
]
